cambios para despligue railway

--- a/AttendanceApi.csproj
+++ b/AttendanceApi.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>AttendanceApi</RootNamespace>
+    <AssemblyName>AttendanceApi</AssemblyName>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
